@@ -144,6 +144,5 @@ AC_OUTPUT([
     docs/reference/Doxyfile
 
   examples/Makefile
-    examples/simple/Makefile
 ])
 :
